# KBR_PC

./: .gitignore  CMakeLists.txt  flake.nix  neovim.json
gui/: mainwindow.ui
src/: mainwindow.cpp  mainwindow.h  rxpacket.cpp  rxpacket.h  serialworker.cpp  serialworker.h  spectrumgrapher.cpp  spectrumgrapher.h  txpacket.cpp  txpacket.h  waveformgrapher.cpp  waveformgrapher.h
src/app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/serial/: CMakeLists.txt  rxpacket.cpp  rxpacket.h  serialworker.cpp  serialworker.h  txpacket.cpp  txpacket.h
src/widgets/: CMakeLists.txt  grapher.cpp  grapher.h  graphergrid.cpp  graphergrid.h  series.h  spectrumgrapher.cpp  spectrumgrapher.h  spectrumseries.cpp  spectrumseries.h  waveformgrapher.cpp  waveformgrapher.h  waveformseries.cpp  waveformseries.h
